（wip）升级至 Minecraft 1.21.1 并迁移至 NeoForge
- 适配 Resourceful Lib/Config 3.x API 变更
- 重构 Recipe 系统，使用新版 Codec / StreamCodec
- 引入 DataComponent 存储耐久度，替代 NBT 标签
- 更新 silt/slush 为 ColoredFallingBlock，调整包名与类引用